unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/Customer_Vehicle_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Vehicle Quote Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Vehicle Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>