unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Actual_Liter_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Liter_Price__c</fullName>
    <label>Actual Liter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>