unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Allowed_Vehicle_profit__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Vehicle_profit__c</fullName>
    <label>Allowed Vehicle profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>