unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Ambulance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ambulance_Cost__c</fullName>
    <label>Ambulance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>