unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Annual_Fuel_Profit_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fuel_Profit_Margin_Target__c</fullName>
    <label>Annual Fuel Profit Margin %(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>