unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Annual_Vehicle_Profit_Rate_from_Master__c.field-meta.xml
<CustomField>
    <fullName>Annual_Vehicle_Profit_Rate_from_Master__c</fullName>
    <label>Annual Vehicle Profit Rate from Master</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>