unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Annual_Vehicles_Profit_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Vehicles_Profit_Value__c</fullName>
    <label>Annual Vehicles Profit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>