unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Client_Classification__c.field-meta.xml
<CustomField>
    <fullName>Client_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>