unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Customer_Quote1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Quote1</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Customer Vehicle Quote Items (Customer Quote1)</relationshipLabel>
    <relationshipName>Customer_Vehicle_Quote_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>