unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Customer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Customer Vehicle Quote Items</relationshipLabel>
    <relationshipName>Customer_Vehicle_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>