unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Customer_Vehicle_Quote_Item_object__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vehicle_Quote_Item_object__c</fullName>
    <label>Customer Vehicle Quote Item object</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>