unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Depreciation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>