unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Depreciation_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Reserve__c</fullName>
    <label>Depreciation Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>