unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Discounts_Additional_Profit__c.field-meta.xml
<CustomField>
    <fullName>Discounts_Additional_Profit__c</fullName>
    <label>Discounts/Additional Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>