unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/ET_Total_Annual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>ET_Total_Annual_Mileage__c</fullName>
    <label>Annual Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>