unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Expected_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Expected_Mobilization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Mobilization</label>
    <type>Date</type>
</CustomField>