unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Extra_Miles__c.field-meta.xml
<CustomField>
    <fullName>Extra_Miles__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extra KM Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>