unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Financing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Financing_Rate__c</fullName>
    <label>Financing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>