unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Type__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET Fleet</fullName>
            </value>
            <value>
                <fullName>Client Fleet</fullName>
            </value>
            <value>
                <fullName>Lease to Own</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>