unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Fuel_Required__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Required</label>
    <type>Checkbox</type>
</CustomField>