unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Fuel_Reserve_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Reserve_Discounted__c</fullName>
    <label>Fuel Reserve(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>