unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/General_Reserve__c.field-meta.xml
<CustomField>
    <fullName>General_Reserve__c</fullName>
    <label>General Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>