unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/General_Reserve_for_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>General_Reserve_for_Discounted_Price__c</fullName>
    <label>General Reserve for Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>