unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/General_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>General_Reserve_Rate__c</fullName>
    <label>General Reserve Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>