unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Insurance_Minimum_Cost__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Minimum_Cost__c</fullName>
    <label>Insurance Minimum Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>