unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Insurance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Rate__c</fullName>
    <label>Insurance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>