unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Is_CheckBox_Row__c.field-meta.xml
<CustomField>
    <fullName>Is_CheckBox_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckBox Row</label>
    <type>Checkbox</type>
</CustomField>