unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Is_Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Is_Delivery_Days__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delivery Days</label>
    <type>Checkbox</type>
</CustomField>