unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Is_Label_Row__c.field-meta.xml
<CustomField>
    <fullName>Is_Label_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Label Row</label>
    <type>Checkbox</type>
</CustomField>