unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Is_Total_Rate_All_Units__c.field-meta.xml
<CustomField>
    <fullName>Is_Total_Rate_All_Units__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total_Rate_All_Units</label>
    <type>Checkbox</type>
</CustomField>