unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Is_Vehicle_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Vehicle_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Type</label>
    <type>Checkbox</type>
</CustomField>