unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Label_ET_Total_Annual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Label_ET_Total_Annual_Mileage__c</fullName>
    <defaultValue>&quot;Annual Mileage&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Annual Mileage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>