unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Label_Monthly_Rate_All_Unit_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Label_Monthly_Rate_All_Unit_with_VAT__c</fullName>
    <defaultValue>&quot;Monthly Rate All Units&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Monthly Rate All Units</label>
    <length>100</length>
    <type>Text</type>
</CustomField>