unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Name__c</fullName>
    <defaultValue>&#39;Vehicle Name&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>