unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Label_No_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Label_No_of_Vehicles__c</fullName>
    <defaultValue>&#39;No of Vehicles&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>No of Vehicles</label>
    <length>50</length>
    <type>Text</type>
</CustomField>