unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Reserve__c</fullName>
    <label>Maintenance Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>