unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Min_Depreciation_Years__c.field-meta.xml
<CustomField>
    <fullName>Min_Depreciation_Years__c</fullName>
    <label>Min Depreciation Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>