unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Min_Veh_Val_from_insurance_master__c.field-meta.xml
<CustomField>
    <fullName>Min_Veh_Val_from_insurance_master__c</fullName>
    <label>Min Veh Val from insurance master</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>