unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/MinVeh_Val_from_insurance_master__c.field-meta.xml
<CustomField>
    <fullName>MinVeh_Val_from_insurance_master__c</fullName>
    <label>MinVeh Val from insurance master</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>