unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Monthly_Rate_All_Unit_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate_All_Unit_with_VAT__c</fullName>
    <label>Monthly All Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>