unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/No_of_Financing_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Financing_Years__c</fullName>
    <label>No of Financing Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>