unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>