unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Passed_years_from_Bus_Model__c.field-meta.xml
<CustomField>
    <fullName>Passed_years_from_Bus_Model__c</fullName>
    <formula>YEAR(Today())-Vehicle_Manufacture_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed years from Bus Model</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>