unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>