unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Pricing_Vehicle_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Vehicle_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Vehicle Request</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Customer Vehicle Quote Items</relationshipLabel>
    <relationshipName>Customer_Vehicle_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>