unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_Depreciation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Depreciation_Rate__c</fullName>
    <label>Refrigerator Depreciation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>