unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_External_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_External_Maintenance_Cost__c</fullName>
    <label>Refrigerator External Maintenance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>