unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_min_Depreciation_Years__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_min_Depreciation_Years__c</fullName>
    <label>Refrigerator min Depreciation Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>