unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_min_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_min_Resale_Value__c</fullName>
    <label>Refrigerator min Resale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>