unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Registration_Fee__c</fullName>
    <label>Refrigerator Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>