unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Refrigerator_Repairs_And_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Repairs_And_Maintenance__c</fullName>
    <label>Refrigerator Repairs And Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>