unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Remaining_Depreciation_of_10_Years__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Depreciation_of_10_Years__c</fullName>
    <label>Remaining Depreciation of 10 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>