unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Remaining_years_from_the_Bus_Model__c.field-meta.xml
<CustomField>
    <fullName>Remaining_years_from_the_Bus_Model__c</fullName>
    <formula>10- Passed_years_from_Bus_Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining years from the Bus Model</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>