unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Required_ROI_Rate__c.field-meta.xml
<CustomField>
    <fullName>Required_ROI_Rate__c</fullName>
    <label>Required ROI Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>