unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Service_Emirate__c.field-meta.xml
<CustomField>
    <fullName>Service_Emirate__c</fullName>
    <formula>text(Pricing_Vehicle_Request__r.ET_Service_Emirate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Emirate</label>
    <type>Text</type>
</CustomField>