unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Annual_Cost_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Cost_Target_Prices__c</fullName>
    <label>Total Annual Cost(Target Prices)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>