unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Annual_Vehicles_Net_Profit_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Vehicles_Net_Profit_Value__c</fullName>
    <label>Total Annual Vehicles Net Profit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>