unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Value__c</fullName>
    <label>Total Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>