unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Total_Depreciation__c</fullName>
    <label>Total Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>