unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_fuel_profits__c.field-meta.xml
<CustomField>
    <fullName>Total_fuel_profits__c</fullName>
    <label>Total fuel profits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>