unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Reserve_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserve_Cost__c</fullName>
    <label>Total Reserve Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>