unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Total_Vehicle_Vat_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Vat_cost__c</fullName>
    <formula>VAT_Cost_on_Direct_Expenses__c + VAT_Cost_on_Indirect_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vehicle Vat cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>