unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Trailer_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Depreciation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer Depreciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>