unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Trailer_Depreciation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Depreciation_Rate__c</fullName>
    <label>Trailer Depreciation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>