unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Trailer_Remaining_Depreciation_Of_10_Yea__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Remaining_Depreciation_Of_10_Yea__c</fullName>
    <label>Trailer Remaining Depreciation Of 10 Yea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>