unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Trailer_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Resale_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer Resale Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>