unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/VAT_Cost_on_Direct_Expenses__c.field-meta.xml
<CustomField>
    <fullName>VAT_Cost_on_Direct_Expenses__c</fullName>
    <label>VAT Cost on Direct Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>