unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Finance_Update__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Finance_Update__c</fullName>
    <label>Vehicle Finance Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>