unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Financing__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Financing__c</fullName>
    <label>Vehicle Financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>