unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Insurance__c</fullName>
    <label>Vehicle Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>